swagger added and working
